force-app/main/default/objects/Routing_Rule__c/Routing_Rule__c.object-meta.xml
<CustomObject>
  <label>Routing Rule</label>
  <pluralLabel>Routing Rules</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Routing Rule Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>