force-app/main/default/objects/Routing_Rule__c/fields/Group__c.field-meta.xml
<CustomField>
  <fullName>Group__c</fullName>
  <label>Routing Group</label>
  <type>Lookup</type>
  <referenceTo>Routing_Group__c</referenceTo>
  <relationshipLabel>Routing Rules</relationshipLabel>
  <relationshipName>RoutingRules</relationshipName>
</CustomField>