force-app/main/default/objects/Routing_Rule__c/fields/Match_Logic__c.field-meta.xml
<CustomField>
  <fullName>Match_Logic__c</fullName>
  <label>Match Logic</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>AND</fullName>
        <default>true</default>
      </value>
      <value>
        <fullName>OR</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>