force-app/main/default/objects/Routing_Rule__c/fields/SOQL_Condition__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Condition__c</fullName>
    <description>SOQL WHERE clause for rule evaluation. Example: Industry = 'Technology' AND AnnualRevenue > 1000000</description>
    <inlineHelpText>Enter a SOQL WHERE clause condition. Example: Industry = 'Technology' AND AnnualRevenue > 1000000</inlineHelpText>
    <label>SOQL Condition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>